zz-backup/11-microservices/istio/sa-virtualservice-external.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: in28mins-external-services
spec:
  hosts:
  - "*"
  gateways:
  - in28mins-gateway                      # 1
  http:
  - match:
    - uri:
        prefix: /currency-conversion
    route:
    - destination:
        host: currency-conversion
        port:
          number: 80
